# awspss

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.ko.md
src/awsps/: auth.py  cache.py  cli.py  config.py
src/awspss/: auth.py  cache.py  cli.py  config.py  selector.py  sso.py
tests/: test_cache.py  test_config.py
