[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awsps"
version = "0.1.0"
description = "AWS Identity Center Permission Set CLI - 임시 자격증명을 인터랙티브하게 선택하여 쉘에 주입"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "boseung-code" },
]
keywords = ["aws", "sso", "identity-center", "cli", "permission-set"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3",
    "click",
    "pzp",
]

[project.urls]
Homepage = "https://github.com/boseung-code/awsps"
Repository = "https://github.com/boseung-code/awsps"

[project.scripts]
awsps = "awsps.cli:main"
