[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awspss"
version = "0.3.0"
description = "AWS Identity Center Permission Sets Switcher"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "boseung-code" },
]
keywords = ["aws", "sso", "identity-center", "cli", "permission-set"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3",
    "click",
    "pzp",
]

[project.urls]
Homepage = "https://github.com/boseung-code/awspss"
Repository = "https://github.com/boseung-code/awspss"

[project.scripts]
awspss = "awspss.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["src/awspss"]

[tool.hatch.build.targets.wheel]
packages = ["src/awspss"]
